--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 .caixa-superior {
     background-image: url(./dev.png);
+    background-position: center;
     height: 90vh;
 }
 
@@ -27,6 +28,7 @@
     display: inline-block;
     margin-left: 20px;
     cursor: pointer;
+    text-decoration: none;
 }
 
 h1 {
@@ -38,18 +40,26 @@ h1 {
 }
 
 form {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1s linear;
     background-color: #ffffff;
     border-radius: 10px;
     float: right;
     padding: 20px;
     margin-right: 30px;
     position: relative;
-    bottom: 70px;
+    bottom: 90px;
+}
+
+.mostrar-formulario {
+    visibility: visible;
+    opacity: 1;
 }
 
 textarea {
     display: block;
-    width: 350px;
+    width: 250px;
     height: 80px;
     background: #F9F9F9;
     border-radius: 5px;
@@ -74,8 +84,8 @@ label {
 input {
     background: #F9F9F9;
     font-size: 14px;
-    height: 40px;
-    width: 350px;
+    height: 30px;
+    width: 250px;
     padding-left: 21px;
     border: 1px solid #E6E6E6;
     border-radius: 5px;
@@ -85,7 +95,7 @@ input {
 
 button {
     background: #40BB15;
-    width: 350px;
+    width: 250px;
     height: 52px;
     margin-top: 40px;
     border: none;
@@ -102,7 +112,7 @@ button {
     margin-bottom: 50px;
 }
 
-.titulo-meio {
+#titulo-meio {
     font-weight: 700;
     font-size: 40px;
     color: #252B42;
@@ -139,7 +149,7 @@ li {
     background-color: #071858;
 }
 
-.titulo-inferior {
+#titulo-inferior {
     font-weight: 700;
     font-size: 40px;
     color: #ffffff;
